--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write ."
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.1",
 		"@sveltejs/kit": "^2.0.6",
 		"@sveltejs/vite-plugin-svelte": "^3.0.1",
 		"@types/uuid": "^9.0.7",
+		"eslint": "^8.56.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-svelte": "^2.35.1",
 		"prettier": "^2.0.0",
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.2.8",
@@ -31,6 +36,7 @@
 		"@types/jsonwebtoken": "^9.0.5",
 		"bcrypt": "^5.1.1",
 		"jsonwebtoken": "^9.0.2",
+		"lint": "^0.8.19",
 		"mongoose": "^8.0.3",
 		"sass": "^1.69.7",
 		"uuid": "^9.0.1"
