--- a/.gitattributes
+++ b/.gitattributes
@@ -13,3 +13,9 @@
 
 *.scss linguist-detectable=true
 *.scss linguist-language=SCSS
+
+*.yml linguist-detectable=true
+*.yml linguist-language=YAML
+
+*.yaml linguist-detectable=true
+*.yaml linguist-language=YAML
