--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "golf",
   "version": "2.0.0",
+  "author": "RealGolf.Games",
+  "license": "All-Rights-Resrved",
   "private": true,
   "scripts": {
     "dev": "vite dev",
