--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,5 +9,9 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+      time: "00:00"
     reviewers:
       - "@MoinJulian"
+    labels:
+      - "pnpm"
+      - "dependencies"
