--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,10 @@
 *.json linguist-detectable=true
 *.json linguist-language=JSON
 
+*.md linguist-detectable=true
+*.md linguist-language=Markdown
+*.md linguist-documentation=false
+
 *.js linguist-detectable=true
 *.js linguist-language=JavaScript
 
