--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,21 @@
 {
+	/**
+	 * VSC Essentials Config
+	 */
+	"editor.tabCompletion": "on",
+	"editor.showDeprecated": true,
 	"workbench.iconTheme": "material-icon-theme",
-	"liveServer.settings.donotShowInfoMsg": true,
-	"files.associations": {
-		"*.css": "css"
-	},
 	"git.enableSmartCommit": true,
 	"git.confirmSync": false,
 	"svelte.enable-ts-plugin": true,
-	"editor.guides.bracketPairs": true,
 	"git.autofetch": true,
 	"git.ignoreRebaseWarning": true,
-	"workbench.colorTheme": "Default Dark+",
+	"editor.guides.bracketPairs": "active",
+	"editor.bracketPairColorization.independentColorPoolPerBracketType": true,
+	"workbench.tree.expandMode": "singleClick",
+	"workbench.tree.renderIndentGuides": "always",
+	"workbench.tree.indent": 6,
+	"editor.defaultFormatter": "esbenp.prettier-vscode",
 	"workbench.startupEditor": "none",
 	"editor.formatOnSave": true,
 	"editor.codeActionsOnSave": {
@@ -31,5 +36,186 @@
 	"gitlens.ai.experimental.provider": "openai",
 	"gitlens.ai.experimental.openai.model": "gpt-3.5-turbo-1106",
 	"explorer.expandSingleFolderWorkspaces": true,
-	"explorer.compactFolders": false
+	"explorer.compactFolders": false,
+	"markdownlint.config": {
+		"default": true,
+		"MD001": false,
+		"MD010": false,
+		"MD024": false,
+		"MD025": false
+	},
+	"todo-tree.tree.showCountsInTree": true,
+	"todo-tree.general.statusBar": "top three",
+	"todo-tree.general.showIconsInsteadOfTagsInStatusBar": true,
+	"todo-tree.general.tags": ["TODO", "FIXME", "FIXIT", "FIX", "BUG"],
+	"todo-tree.general.tagGroups": {
+		"FIXME": ["FIXME", "FIXIT", "FIX", "BUG"]
+	},
+	"todo-tree.highlights.customHighlight": {
+		"TODO": {
+			"gutterIcon": true,
+			"icon": "tasklist",
+			"iconColour": "#FF8C00",
+			"type": "tag",
+			"background": "#CF7200",
+			"foreground": "#FFFFFF",
+			"fontWeight": "bold"
+		},
+		"FIXME": {
+			"gutterIcon": true,
+			"icon": "tools",
+			"iconColour": "#00FF00",
+			"type": "tag",
+			"background": "#008000",
+			"foreground": "#FFFF00",
+			"fontWeight": "bold"
+		}
+	},
+	"better-comments.multilineComments": true,
+	"better-comments.tags": [
+		{
+			"tag": "!",
+			"color": "#FF2D00",
+			"strikethrough": false,
+			"underline": false,
+			"backgroundColor": "transparent",
+			"bold": true,
+			"italic": false
+		},
+		{
+			"tag": "?",
+			"color": "#3498DB",
+			"strikethrough": false,
+			"underline": false,
+			"backgroundColor": "transparent",
+			"bold": false,
+			"italic": false
+		},
+		{
+			"tag": "//",
+			"color": "#474747",
+			"strikethrough": true,
+			"underline": false,
+			"backgroundColor": "transparent",
+			"bold": false,
+			"italic": false
+		},
+		{
+			"tag": "todo",
+			"color": "#FF8C00",
+			"strikethrough": false,
+			"underline": false,
+			"backgroundColor": "transparent",
+			"bold": false,
+			"italic": false
+		},
+		{
+			"tag": "fixme",
+			"color": "#008000",
+			"strikethrough": false,
+			"underline": false,
+			"backgroundColor": "transparent",
+			"bold": false,
+			"italic": false
+		},
+		{
+			"tag": "fixit",
+			"color": "#008000",
+			"strikethrough": false,
+			"underline": false,
+			"backgroundColor": "transparent",
+			"bold": false,
+			"italic": false
+		},
+		{
+			"tag": "fix",
+			"color": "#008000",
+			"strikethrough": false,
+			"underline": false,
+			"backgroundColor": "transparent",
+			"bold": false,
+			"italic": false
+		},
+		{
+			"tag": "bug",
+			"color": "#008000",
+			"strikethrough": false,
+			"underline": false,
+			"backgroundColor": "transparent",
+			"bold": false,
+			"italic": false
+		},
+		{
+			"tag": "*",
+			"color": "#98C379",
+			"strikethrough": false,
+			"underline": false,
+			"backgroundColor": "transparent",
+			"bold": true,
+			"italic": false
+		}
+	],
+	"editor.stickyScroll.enabled": true,
+	"svg.preview.autoOpen": false,
+	"emojisense.languages": {
+		"plaintext": false,
+		"markdown": true,
+		"json": true,
+		"scminput": true
+	},
+	"terminal-in-status-bar.statusBarAlignment": "right",
+	"terminal-in-status-bar.statusBarPriority": 10000,
+	"indentRainbow.ignoreErrorLanguages": ["haskell"],
+	"bookmarks.saveBookmarksInProject": false,
+	"bookmarks.showCommandsInContextMenu": true,
+	"git-graph.commitDetailsView.location": "Docked to Bottom",
+	"git-graph.contextMenuActionsVisibility": {
+		"remoteBranch": {
+			"checkout": false,
+			"cherrypick": false,
+			"createBranch": false,
+			"createPullRequest": false,
+			"delete": false,
+			"drop": false,
+			"merge": false,
+			"pull": false,
+			"rebase": false,
+			"reset": false,
+			"revert": false
+		},
+		"branch": {
+			"checkout": false,
+			"cherrypick": false,
+			"createBranch": false,
+			"createPullRequest": false,
+			"delete": false,
+			"drop": false,
+			"merge": false,
+			"push": false,
+			"rename": false,
+			"rebase": false,
+			"reset": false,
+			"revert": false
+		},
+		"commit": {
+			"checkout": false,
+			"cherrypick": false,
+			"createBranch": false,
+			"drop": false,
+			"merge": false,
+			"rebase": false,
+			"reset": false,
+			"revert": false
+		}
+	},
+	"gitlens.statusBar.enabled": true,
+	"gitlens.statusBar.command": "gitlens.openCommitOnRemote",
+	"gitlens.blame.avatars": true,
+	"gitlens.hovers.avatars": true,
+	"gitlens.hovers.avatarSize": 64,
+	"gitlens.hovers.changesDiff": "hunk",
+	"codesnap.roundedCorners": true,
+	"codesnap.containerPadding": "2em",
+	"codesnap.showWindowTitle": true,
+	"codesnap.realLineNumbers": true
 }
