--- a/package.json
+++ b/package.json
@@ -40,11 +40,15 @@
 		"@sveltejs/adapter-node": "^4.0.1",
 		"@types/bcrypt": "^5.0.2",
 		"@types/jsonwebtoken": "^9.0.5",
+		"autoprefixer": "^10.4.17",
 		"bcrypt": "^5.1.1",
 		"jsonwebtoken": "^9.0.2",
 		"lint": "^1.1.2",
 		"mongoose": "^8.1.2",
+		"nanoid": "^5.0.5",
+		"postcss": "^8.4.35",
 		"sass": "^1.70.0",
+		"tailwindcss": "^3.4.1",
 		"uuid": "^9.0.1"
 	}
 }
