Update .env.example file

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,12 @@
-SECRET_JWT_KEY =  
-SECRET_MONGODB_CONNECTION = 
-SECRET_USER_NAME = 
-SECRET_USER_PASSWORD = 
+# JWT Token Secret
+SECRET_JWT_KEY = 
+
+# MongoDB User DB Connection
+SECRET_MONGODB_USERDB_CONNECTION = 
+SECRET_USER_USERDB_NAME = 
+SECRET_USER_USERDB_PASSWORD = 
+
+# MongoDB ShortURL DB Connection
+SECRET_MONGODB_SHORTURLDB_CONNECTION = 
+SECRET_SHORTURLDB_NAME = 
+SECRET_SHORTURLDB_PASSWORD = 
