--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
+		"husky": "^9.0.11",
 		"prettier": "^2.0.0",
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.2.10",
