--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write ."
 	},
+	"hooks": {
+		"pre-commit": "pnpm run build && pnpm run format && pnpm run lint"
+	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.1.1",
 		"@sveltejs/kit": "^2.5.0",
