--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"prepare": "husky"
 	},
 	"hooks": {
 		"pre-commit": "pnpm run build && pnpm run format && pnpm run lint"
@@ -21,6 +22,7 @@
 		"@sveltejs/adapter-auto": "^3.1.1",
 		"@sveltejs/kit": "^2.5.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.2",
+		"@types/dompurify": "^3.0.5",
 		"@types/he": "^1.2.3",
 		"@types/mathjax": "^0.0.40",
 		"@types/uuid": "^9.0.8",
@@ -47,6 +49,7 @@
 		"@types/bcrypt": "^5.0.2",
 		"@types/jsonwebtoken": "^9.0.5",
 		"bcrypt": "^5.1.1",
+		"dompurify": "^3.0.8",
 		"front-matter": "^4.0.2",
 		"he": "^1.2.0",
 		"jsonwebtoken": "^9.0.2",
