--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
-		"prepare": "husky"
+		"prepare": "husky",
+		"run:precommit": ".husky/pre-commit"
 	},
 	"hooks": {
 		"pre-commit": "pnpm run build && pnpm run format && pnpm run lint"
