--- a/.gitattributes
+++ b/.gitattributes
@@ -11,6 +11,6 @@
 *.scss linguist-language=SCSS
 
 *.sh linguist-detectable=false
-Dockerfile linguist-detectable=true
+dockerfile linguist-detectable=true
 
 pnpm-lock.yaml linguist-vendored
