--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"mongoose": "^8.1.2",
 		"nanoid": "^5.0.5",
 		"postcss": "^8.4.35",
+		"postcss-safe-parser": "^7.0.0",
 		"sass": "^1.70.0",
 		"shiki": "^1.1.2",
 		"tailwindcss": "^3.4.1",
