--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@sveltejs/vite-plugin-svelte": "^3.0.2",
 		"@types/dompurify": "^3.0.5",
 		"@types/he": "^1.2.3",
+		"@types/markdown-it": "^13.0.7",
 		"@types/mathjax": "^0.0.40",
 		"@types/uuid": "^9.0.8",
 		"@typescript-eslint/eslint-plugin": "^7.0.1",
