Update example env

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ SECRET_MONGODB_USERDB_CONNECTION =
 SECRET_USER_USERDB_NAME = 
 SECRET_USER_USERDB_PASSWORD = 
 
-# MongoDB ShortURL DB Connection
-SECRET_MONGODB_SHORTURLDB_CONNECTION = 
-SECRET_SHORTURLDB_NAME = 
-SECRET_SHORTURLDB_PASSWORD = 
+# MongoDB Course DB CONNECTION
+SECRET_MONGODB_COURSEDB_CONNECTION = 
+SECRET_COURSE_NAME = 
+SECRET_COURSE_PASSWORD = 
