--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
 	"compilerOptions": {
 		"target": "es2021",
 		"allowJs": true,
-		"checkJs": true,
+		"checkJs": false,
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
 		"resolveJsonModule": true,
@@ -11,7 +11,8 @@
 		"sourceMap": true,
 		"strict": true,
 		"moduleResolution": "node"
-	}
+	},
+	"exclude": ["node_modules", "dist", ".svelte-kit", "build", "**/*.js"]
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
 	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
