--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -18,7 +18,8 @@
 		"ardenivanov.svelte-intellisense",
 		"garlandcrow.vscode-svelte-pluskit-snippets",
 		"gydunhn.vsc-essentials",
-		"wakatime.vscode-wakatime"
+		"wakatime.vscode-wakatime",
+		"bradlc.vscode-tailwindcss"
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": []
