--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"autoprefixer": "^10.4.18",
 		"bcrypt": "^5.1.1",
 		"dompurify": "^3.0.9",
+		"express": "^4.18.3",
 		"jsonwebtoken": "^9.0.2",
 		"lint": "^1.1.2",
 		"mongoose": "^8.2.1",
@@ -57,6 +58,8 @@
 		"postcss": "^8.4.35",
 		"postcss-safe-parser": "^7.0.0",
 		"sass": "^1.71.1",
+		"socket.io": "^4.7.4",
+		"socket.io-client": "^4.7.4",
 		"tailwindcss": "^3.4.1",
 		"uuid": "^9.0.1"
 	}
