--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,9 @@ node_modules
 .env
 .env.*
 !.env.example
+pnpm-lock.yaml
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
 # Local Netlify folder
 .netlify
