--- a/.gitattributes
+++ b/.gitattributes
@@ -10,6 +10,6 @@
 *.scss linguist-detectable=true
 *.scss linguist-language=SCSS
 
-*.sh linguist-detectable=false
+*.sh linguist-vendored
 
 pnpm-lock.yaml linguist-vendored
