--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@sveltejs/kit": "^2.5.3",
 		"@sveltejs/vite-plugin-svelte": "^3.0.2",
 		"@types/dompurify": "^3.0.5",
+		"@types/express": "^4.17.21",
 		"@types/uuid": "^9.0.8",
 		"@typescript-eslint/eslint-plugin": "^7.1.1",
 		"eslint": "^8.57.0",
