--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,11 @@ pnpm-lock.yaml
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 
+# Server Files
+
+server.js
+sockets.js
+chat.js
+
 # Local Netlify folder
 .netlify
