--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
 	"author": "RealGolf.Games",
 	"license": "All-Rights-Reserved",
 	"private": true,
+	"main": "server.js",
 	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
+		"start": "node server.js",
+		"build:kit": "vite build",
+		"build:server": "tsc server.ts --esModuleInterop --target esnext --moduleResolution node",
+		"build": "npm run build:kit && npm run build:server",
 		"preview": "vite preview",
-		"prod": "vite build && vite preview --open",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
@@ -25,6 +27,7 @@
 		"@sveltejs/vite-plugin-svelte": "^3.0.2",
 		"@types/dompurify": "^3.0.5",
 		"@types/express": "^4.17.21",
+		"@types/node": "^20.11.28",
 		"@types/uuid": "^9.0.8",
 		"@typescript-eslint/eslint-plugin": "^7.1.1",
 		"eslint": "^8.57.0",
