--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "golf",
-	"version": "3.2.7",
+	"version": "3.3.0",
 	"author": "RealGolf.Games",
 	"license": "All-Rights-Reserved",
 	"private": true,
@@ -54,6 +54,7 @@
 		"autoprefixer": "^10.4.18",
 		"bcrypt": "^5.1.1",
 		"dompurify": "^3.0.9",
+		"dotenv": "^16.4.5",
 		"express": "^4.18.3",
 		"jsonwebtoken": "^9.0.2",
 		"lint": "^1.1.2",
