--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "golf",
-	"version": "3.3.0",
+	"version": "3.3.1",
 	"author": "RealGolf.Games",
 	"license": "All-Rights-Reserved",
 	"private": true,
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js",
+		"start": "concurrently \"node server.js\" \"node build/index.js\"",
 		"dev": "vite dev",
 		"build:kit": "vite build",
 		"build:server": "tsc server.ts --esModuleInterop --target esnext --moduleResolution node",
@@ -26,11 +26,14 @@
 		"@sveltejs/adapter-auto": "^3.1.1",
 		"@sveltejs/kit": "^2.5.3",
 		"@sveltejs/vite-plugin-svelte": "^3.0.2",
+		"@typescript-eslint/eslint-plugin": "^7.1.1",
+		"@types/bcrypt": "^5.0.2",
+		"@types/jsonwebtoken": "^9.0.6",
 		"@types/dompurify": "^3.0.5",
 		"@types/express": "^4.17.21",
 		"@types/node": "^20.11.28",
 		"@types/uuid": "^9.0.8",
-		"@typescript-eslint/eslint-plugin": "^7.1.1",
+		"concurrently": "^8.2.2",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
@@ -50,8 +53,6 @@
 		"@fortawesome/free-regular-svg-icons": "^6.5.1",
 		"@fortawesome/free-solid-svg-icons": "^6.5.1",
 		"@sveltejs/adapter-node": "^5.0.1",
-		"@types/bcrypt": "^5.0.2",
-		"@types/jsonwebtoken": "^9.0.6",
 		"autoprefixer": "^10.4.18",
 		"bcrypt": "^5.1.1",
 		"dompurify": "^3.0.9",
