--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	"main": "server.js",
 	"scripts": {
 		"server": "node server.js",
+		"server:dev": "nodemon server.js",
 		"dev": "vite dev",
 		"build:kit": "vite build",
 		"build:server": "tsc server.ts --esModuleInterop --target esnext --moduleResolution node",
