--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
 		"@sveltejs/kit": "^2.5.5",
 		"@sveltejs/vite-plugin-svelte": "^3.0.2",
 		"@types/bcrypt": "^5.0.2",
-		"@types/jsonwebtoken": "^9.0.6",
 		"@types/dompurify": "^3.0.5",
 		"@types/express": "^4.17.21",
+		"@types/jsonwebtoken": "^9.0.6",
 		"@types/node": "^20.11.28",
 		"@types/uuid": "^9.0.8",
-		"concurrently": "^8.2.2",
 		"@typescript-eslint/eslint-plugin": "^7.5.0",
+		"concurrently": "^8.2.2",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
@@ -44,6 +44,7 @@
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.2.12",
 		"svelte-check": "^3.6.9",
+		"svelte-eslint-parser": "^0.34.1",
 		"svelte-fa": "^4.0.2",
 		"tslib": "^2.6.2",
 		"typescript": "^5.4.4",
@@ -55,21 +56,21 @@
 		"@fortawesome/free-regular-svg-icons": "^6.5.2",
 		"@fortawesome/free-solid-svg-icons": "^6.5.2",
 		"@sveltejs/adapter-node": "^5.0.1",
-		"bcrypt": "^5.1.1",
-		"dotenv": "^16.4.5",
-		"express": "^4.18.3",
 		"@types/jsonwebtoken": "^9.0.6",
 		"autoprefixer": "^10.4.19",
+		"bcrypt": "^5.1.1",
 		"dompurify": "^3.0.11",
+		"dotenv": "^16.4.5",
+		"express": "^4.18.3",
 		"jsonwebtoken": "^9.0.2",
 		"lint": "^1.1.2",
 		"mongoose": "^8.3.0",
 		"nanoid": "^5.0.6",
 		"postcss": "^8.4.38",
 		"postcss-safe-parser": "^7.0.0",
+		"sass": "^1.74.1",
 		"socket.io": "^4.7.4",
 		"socket.io-client": "^4.7.5",
-		"sass": "^1.74.1",
 		"tailwindcss": "^3.4.3",
 		"uuid": "^9.0.1"
 	}
