--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"extends": "./.svelte-kit/tsconfig.json",
 	"compilerOptions": {
-		"target": "ESNext",
+		"target": "ES2021",
 		"allowJs": true,
 		"checkJs": false,
 		"esModuleInterop": true,
@@ -10,7 +10,7 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-		"moduleResolution": "Node16"
+		"moduleResolution": "Node"
 	},
 	"exclude": ["node_modules", "dist", ".svelte-kit", "build", "**/*.js"]
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
