Moved node server into server folder

--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
 	"author": "RealGolf.Games",
 	"license": "All-Rights-Reserved",
 	"private": true,
-	"main": "server.js",
+	"main": "server/app.js",
 	"scripts": {
-		"server": "node server.js",
-		"server:dev": "nodemon server.js",
+		"server": "node server/app.js",
+		"server:dev": "nodemon server/app.js",
 		"dev": "vite dev",
 		"build:kit": "vite build",
-		"build:server": "tsc server.ts --esModuleInterop --target esnext --moduleResolution node",
+		"build:server": "tsc server/app.ts --esModuleInterop --target esnext --moduleResolution node",
 		"build": "pnpm run build:kit && pnpm run build:server",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
