Add user-related files and update build command in render.yml

--- a/render.yml
+++ b/render.yml
@@ -2,5 +2,5 @@ services:
   - type: web
     name: realgolf
     env: node
-    buildCommand: npm install && npm run build
-    startCommand: node build/index.js
+    buildCommand: pnpm install && pnpm run build
+    startCommand: pnpm run start
