--- a/.github/workflows/codespell.yml
+++ b/.github/workflows/codespell.yml
@@ -22,3 +22,4 @@ jobs:
         uses: codespell-project/actions-codespell@v2
         with:
           check_filenames: true
+          check_hidden: true
