--- a/.github/workflows/codespell.yml
+++ b/.github/workflows/codespell.yml
@@ -23,3 +23,4 @@ jobs:
         with:
           check_filenames: true
           check_hidden: true
+          skip: pnpm-lock.yaml, translations/*
