--- a/.github/workflows/kit.yml
+++ b/.github/workflows/kit.yml
@@ -14,6 +14,7 @@ jobs:
 
     env:
       SECRET_MONGODB_USERDB_CONNECTION: ${{ secrets.SECRET_MONGODB_USERDB_CONNECTION }}
+      SECRET_MONGODB_COURSEDB_CONNECTION: ${{ secrets.SECRET_MONGODB_COURSEDB_CONNECTION }}
 
     steps:
       - name: Checkout repository
