--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -12,6 +12,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    env:
+      SECRET_MONGODB_USERDB_CONNECTION: ${{ secrets.SECRET_MONGODB_USERDB_CONNECTION }}
+      SECRET_MONGODB_COURSEDB_CONNECTION: ${{ secrets.SECRET_MONGODB_COURSEDB_CONNECTION }}
+      SECRET_JWT_KEY: ${{ secrets.SECRET_JWT_KEY }}
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -25,6 +30,9 @@ jobs:
         run: |
           npm install -g pnpm@8.15.5
           pnpm install
+
+      - name: Build kit
+        run: pnpm run build:kit
 
       - name: Build server
         run: pnpm run build:server
