--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"format": "prettier --write .",
 		"prepare": "husky",
 		"precommit": ".husky/pre-commit",
-		"start": "pnpm run build && pnpm run server"
+		"start": "pnpm run build && pnpm run server",
+		"extract": "svelte-i18n extract \"src/**/*.svelte\" src/locales/en.json"
 	},
 	"hooks": {
 		"pre-commit": "pnpm run build && pnpm run format && pnpm run lint"
@@ -71,6 +72,7 @@
 		"sass": "^1.75.0",
 		"socket.io": "^4.7.4",
 		"socket.io-client": "^4.7.5",
+		"svelte-i18n": "^4.0.0",
 		"tailwindcss": "^3.4.3",
 		"uuid": "^9.0.1"
 	}
