--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,7 +1,6 @@
 files:
-  - source: /translation/source/*.xml
-    translation: /translation/dest/%file_name%/%locale%.%file_extension%
-    translate_attributes: 0
+  - source: /src/locales/en.json
+    translation: /src/locales/%two_letters_code%.json
     update_option: update_without_changes
 commit_message: 'New translations: %original_file_name% (%language%)'
 append_commit_message: 
