--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"@types/bcrypt": "^5.0.2",
 		"@types/dompurify": "^3.0.5",
 		"@types/express": "^4.17.21",
+		"@types/js-cookie": "^3.0.6",
 		"@types/jsonwebtoken": "^9.0.6",
 		"@types/node": "^20.12.7",
 		"@types/uuid": "^9.0.8",
@@ -63,6 +64,7 @@
 		"dompurify": "^3.1.0",
 		"dotenv": "^16.4.5",
 		"express": "^4.18.3",
+		"js-cookie": "^3.0.5",
 		"jsonwebtoken": "^9.0.2",
 		"lint": "^1.1.2",
 		"mongoose": "^8.3.2",
