--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -16,6 +16,7 @@ jobs:
       SECRET_MONGODB_USERDB_CONNECTION: ${{ secrets.SECRET_MONGODB_USERDB_CONNECTION }}
       SECRET_MONGODB_COURSEDB_CONNECTION: ${{ secrets.SECRET_MONGODB_COURSEDB_CONNECTION }}
       SECRET_JWT_KEY: ${{ secrets.SECRET_JWT_KEY }}
+      SECRET_EMAIL_PASSWORD: ${{ secrets.SECRET_EMAIL_PASSWORD }}
 
     steps:
       - name: Checkout repository
