--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,15 @@
 # JWT Token Secret
-SECRET_JWT_KEY = 
+SECRET_JWT_KEY = A random number and letter string
 
 # MongoDB User DB Connection
-SECRET_MONGODB_USERDB_CONNECTION = 
-SECRET_USER_USERDB_NAME = 
-SECRET_USER_USERDB_PASSWORD = 
+SECRET_MONGODB_USERDB_CONNECTION = MongoDB Connection String for User Database
+SECRET_USER_USERDB_NAME = MongoDB Username for User Database
+SECRET_USER_USERDB_PASSWORD = MongoDB Password for User Database
 
 # MongoDB Course DB CONNECTION
-SECRET_MONGODB_COURSEDB_CONNECTION = 
-SECRET_COURSE_NAME = 
-SECRET_COURSE_PASSWORD = 
+SECRET_MONGODB_COURSEDB_CONNECTION = MongoDB Connection String for Course Database
+SECRET_COURSE_NAME = MongoDB Username for Course Database
+SECRET_COURSE_PASSWORD = MongoDB Password for Course Database
+
+# Nodemailer
+SECRET_EMAIL_PASSWORD = Password for Email Service
