Update Workflow files for kit and server

--- a/.github/workflows/kit.yml
+++ b/.github/workflows/kit.yml
@@ -16,7 +16,8 @@ jobs:
       SECRET_MONGODB_USERDB_CONNECTION: ${{ secrets.SECRET_MONGODB_USERDB_CONNECTION }}
       SECRET_MONGODB_COURSEDB_CONNECTION: ${{ secrets.SECRET_MONGODB_COURSEDB_CONNECTION }}
       SECRET_JWT_KEY: ${{ secrets.SECRET_JWT_KEY }}
-      SECRET_EMAIL_PASSWORD: ${{ secrets.SECRET_EMAIL_PASSWORD }}
+      SECRET_SUPPORT_EMAIL_PASSWORD: ${{ secrets.SECRET_SUPPORT_EMAIL_PASSWORD }}
+      SECRET_NOREPLY_EMAIL_PASSWORD: ${{ secrets.SECRET_NOREPLY_EMAIL_PASSWORD }}
 
     steps:
       - name: Checkout repository
